--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  padding: 0 $space-md $space-sm;
+  padding-bottom: $space-sm;
   text-align: center;
   &__top {
     padding-top: $space-sm;
